Refactoring, doc, fixes
